--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="submit_japanese">送信</string>
+    <string name="input_hint">ISBNコードを入力</string>
+    <string name="barcodeBtn">バーコードを読み取る</string>
 
 </resources>
